package heritage.zoo.lastversion.animal.classification;

public interface AnimalAquatique extends Animal {
}
