package heritage.zoo.lastversion.animal.classification;

/** Animaux à la fois terrestre et aquatique. */
public interface AnimalSemiAquatique extends AnimalAquatique, AnimalTerrestre {
}
