@startuml Zoo_v0
enum EnclosType {
    TERRE
    MER
    LES_DEUX
}

class Enclos {
    -type: String
    ' -bassin: boolean
    ' -terrain: boolean
    +ajouterAnimal(animal: Animal): void
    +peutRentrer(animal: Animal): boolean
}

class Animal {
    -typeAnimal: String
    -nom: String
    -phraseDeplacement: String
    -phraseRepos: String
    ' -avoirBesoinBassin: boolean
    ' -avoirBesoinTerrain: boolean
    +seDeplacer(): void
    +seReposer(): void
}

Enclos --> "0..5" Animal: animaux >
Enclos -> "1" EnclosType: est de type >
Animal -> "1" EnclosType: compatible avec >

class Application {
    {static} main(argv: String[*]): void
}

Application .> Enclos
Application .> Animal
@enduml

@startuml Zoo_v1
interface Animal {
    +seDeplacer(): void
    +seReposer(): void
}

!unquoted procedure animal($name)
class $name implements Animal {
    +seDeplacer(): void
    +seReposer(): void
}
!endprocedure

' class AnimalAquatique implements Animal
' class AnimalTerrestre implements Animal
' class AnimalAmphibie implements Animal

' interface PeutVivreDansLeau
' interface PeutVivreSurTerre
' interface PeutVivreAmphibie extends PeutVivreDansLeau, PeutVivreSurTerre

animal(Dauphin)
animal(ChatPecheur)
animal(Phoque)
animal(Alligator)


' interface Enclos {
'     +{static} NB_ANIMAUX_PAR_ENCLOS = 5;

'     +ajoutAnimal(animal: Animal): void
'     +peutRentrer(animal: Animal): boolean
' }

' !unquoted procedure enclos($name)
' class $name implements Enclos {
'     -compteurAnimaux: int = 0
'     +ajoutAnimal(animal: Animal): void
'     +peutRentrer(animal: Animal): boolean
'     -lanimalEstCompatible(animal: Animal): boolean
'     -pasDautreEspece(animal: Animal): boolean
'     -ilResteDesPlaces(): boolean
' }
' !endprocedure
abstract class Enclos {
    +{static} NB_ANIMAUX_PAR_ENCLOS = 5;
    -compteurAnimaux: int = 0

    +ajoutAnimal(animal: Animal): void
    +peutRentrer(animal: Animal): boolean
    -pasDautreEspece(animal: Animal): boolean
    -ilResteDesPlaces(): boolean
    {abstract} #lanimalEstCompatible(animal: Animal): boolean
}

!unquoted procedure enclos($name)
class $name implements Enclos {

    -lanimalEstCompatible(animal: Animal): boolean
}
!endprocedure

enclos(Terrain)
enclos(Bassin)
enclos(TerrainBassin)

Enclos -> "0..5" Animal: animaux >

@enduml

@startuml Zoo_v2
abstract class Animal {
    +seDeplacer(): void
    +seReposer(): void
}

!unquoted procedure animal($name, $impls)
class $name extends Animal implements $impls {
    +seDeplacer(): void
    +seReposer(): void
}
!endprocedure

interface Aquatique
interface Terrestre
interface "SemiAquatique" as Amphibie
Amphibie --|> Aquatique
Amphibie --|> Terrestre

animal(ChatPecheur, Terrestre)
' animal(Alligator, "Terrestre, Aquatique")
' animal(Phoque, "Terrestre, Aquatique")
animal(Alligator, Amphibie)
animal(Phoque, Amphibie)
animal(Dauphin, Aquatique)


abstract class Enclos {
    -{static} NB_ANIMAUX_PAR_ENCLOS = 5;
    -compteurAnimaux: int = 0

    +ajoutAnimal(animal: Animal): void
    +peutRentrer(animal: Animal): boolean
    {abstract}#estCompatible(animal: Animal): boolean
}

!unquoted procedure enclos($name)
class $name implements Enclos {
    #estCompatible(animal: Animal): boolean
}
!endprocedure

enclos(Terrain)
enclos(Bassin)
enclos(TerrainBassin)

Enclos -> "0..5" Animal: animaux >

' Bassin ..> Aquatique
' Terrain ..> Terrestre
' TerrainBassin ..> Amphibie
@enduml



@startuml Zoo_vlast
interface Animal {
    +seDeplacer(): void
    +seReposer(): void
}

!unquoted procedure animal($name, $impls)
class $name implements $impls {
    +seDeplacer(): void
    +seReposer(): void
}
!endprocedure

interface "AnimalAquatique" as Aquatique extends Animal
interface "AnimalTerrestre" as Terrestre extends Animal
interface "AnimalSemiAquatique" as Amphibie
Aquatique <|-- Amphibie
Terrestre <|-- Amphibie

animal(ChatPecheur, Terrestre)
' animal(Alligator, "Terrestre, Aquatique")
' animal(Phoque, "Terrestre, Aquatique")
animal(Alligator, Amphibie)
animal(Phoque, Amphibie)
animal(Dauphin, Aquatique)


abstract class Enclos {
    -{static} NB_ANIMAUX_PAR_ENCLOS = 5;
    -compteurAnimaux: int = 0

    +ajoutAnimal(animal: Animal): void
    +peutRentrer(animal: Animal): boolean
    {abstract}#estCompatible(animal: Animal): boolean
    -pasDautreEspece(animal: Animal): boolean
    -ilResteDesPlaces(): boolean
}

!unquoted procedure enclos($name)
class $name implements Enclos {
    #estCompatible(animal: Animal): boolean
}
!endprocedure

enclos(Terrain)
enclos(Bassin)
enclos(TerrainBassin)

Enclos -> "0..5" Animal: animaux >

' Bassin ..> Aquatique
' Terrain ..> Terrestre
' TerrainBassin ..> Amphibie
@enduml
